--- a/education/templates/base.html
+++ b/education/templates/base.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/app.css' %}" />
     {% block stylesheet %}{% endblock %}
-    <!-- HERE -->
   </head>
   <body>
     {% block body %}
@@ -28,14 +27,28 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="mainMenu">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">{{ user.username }}</a>
-            </li>
+        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+        {% if user.is_authenticated %}
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            {{ user }}
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+            <li><a class="dropdown-item" href="#">My account</a></li>
+            <li><a class="dropdown-item" href="#">Change password</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Log out</a></li>
           </ul>
-        </div>
-      </div>
+        </li>
+      </ul>
+      {% else %}
+        <form class="form-inline ml-auto">
+          <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+          <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+        </form>
+      {% endif %}
+    </div>
     </nav>
 
     <div class="container">
@@ -45,6 +58,12 @@
       {% block content %} {% endblock %}
     </div>
     {% endblock body %}
-    <!-- AND HERE -->
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
