--- a/education/templates/login.html
+++ b/education/templates/login.html
@@ -1,20 +1,25 @@
-{% extends 'base_acounts.html' %} {% block title %}Sign up to Django Boards
+{% extends 'base_acounts.html' %} {% block title %}Log in to Django Boards
 {%endblock %} {% block content %}
 <div class="row justify-content-center">
-  <div class="col-lg-8 col-md-10 col-sm-12">
+  <div class="col-lg-4 col-md-6 col-sm-8">
     <div class="card">
       <div class="card-body">
-        <h3 class="card-title">Sign up</h3>
+        <h3 class="card-title">Log in</h3>
         <form method="post" novalidate>
           {% csrf_token %} {% include 'form.html' %}
           <button type="submit" class="btn btn-primary btn-block">
-            Create an account
+            Log in
           </button>
         </form>
       </div>
       <div class="card-footer text-muted text-center">
-        Already have an account? <a href="{% url 'login' %}">Log in</a>
+        New to Django Boards? <a href="{% url 'signup' %}">Sign up</a>
       </div>
+    </div>
+    <div class="text-center py-2">
+      <small>
+        <a href="#" class="text-muted">Forgot your password?</a>
+      </small>
     </div>
   </div>
 </div>
