--- a/education/templates/password_reset.html
+++ b/education/templates/password_reset.html
@@ -1,19 +1,20 @@
-{% extends 'base_acounts.html' %} {% block title %}Sign up to Django Boards
+{% extends 'base_accounts.html' %} {% block title %}Reset your password
 {%endblock %} {% block content %}
 <div class="row justify-content-center">
-  <div class="col-lg-8 col-md-10 col-sm-12">
+  <div class="col-lg-4 col-md-6 col-sm-8">
     <div class="card">
       <div class="card-body">
-        <h3 class="card-title">Sign up</h3>
+        <h3 class="card-title">Reset your password</h3>
+        <p>
+          Enter your email address and we will send you a link to reset your
+          password.
+        </p>
         <form method="post" novalidate>
           {% csrf_token %} {% include 'form.html' %}
           <button type="submit" class="btn btn-primary btn-block">
-            Create an account
+            Send password reset email
           </button>
         </form>
-      </div>
-      <div class="card-footer text-muted text-center">
-        Already have an account? <a href="{% url 'login' %}">Log in</a>
       </div>
     </div>
   </div>
