--- a/education/templates/form.html
+++ b/education/templates/form.html
@@ -11,7 +11,7 @@
 {% for field in form %}
   <div class="form-group">
     {{ field.label_tag }}
-    {% render_field field class=field|input_class %}
+    {{ field }}
     {% for error in field.errors %}
       <div class="invalid-feedback">
         {{ error }}
