--- a/education/templates/partial_board_create.html
+++ b/education/templates/partial_board_create.html
@@ -1,6 +1,6 @@
 {% load widget_tweaks %}
 
-<form method="post" action="{% url 'board_create' %}" class='js-board-create-form'>
+<form method="post" action="{% url 'board_create' page %}" class='js-board-create-form'>
   {% csrf_token %}
   <div class="modal-header">
   <h4 class="modal-title">Create new board</h4>
