--- a/education/templates/partial_board_update.html
+++ b/education/templates/partial_board_update.html
@@ -1,6 +1,6 @@
 {% load widget_tweaks %}
 
-<form method="post" action="{% url 'board_update' form.instance.pk %}" class="js-board-update-form">
+<form method="post" action="{% url 'board_update' form.instance.pk page %}" class="js-board-update-form">
   {% csrf_token %}
   <div class="modal-header">
     <h4 class="modal-title">Update board</h4>
