--- a/education/templates/home.html
+++ b/education/templates/home.html
@@ -13,34 +13,17 @@
 {% endblock %}
 
 {% block content %}
-{% if messages %}
-  <ul class="messages">
-    {% for message in messages %}
-      <li class="{{ message.tags }}">{{ message }}</li>
-    {% endfor %}
-  </ul>
-{% endif %}
 {% if user.is_blogger %}
 <p>
-    <button type="button" class="btn btn-primary js-create-board" data-url="{% url 'board_create' %}">
+    <button type="button" class="btn btn-primary js-create-board" data-url="{% url 'board_create' page_obj.number %}">
       <span class="glyphicon glyphicon-plus"></span>
       New Board
     </button>
   </p>
 {% endif %}
-  <table class="table" id="board-table">
-    <thead class="thead-inverse">
-      <tr>
-        <th>Board</th>
-        <th>Posts</th>
-        <th>Topics</th>
-        <th>Last Post</th>
-      </tr>
-    </thead>
-    <tbody>
+  
       {% include 'partial_board_list.html' %}
-    </tbody>
-  </table>
+
   <nav aria-label="...">
   <ul class="pagination">
       <li class="page-item {% if not page_obj.has_previous %}disabled{% endif %}">
