--- a/education/templates/login.html
+++ b/education/templates/login.html
@@ -20,6 +20,9 @@
       <small>
         <a href="#" class="text-muted">Forgot your password?</a>
       </small>
+        <p><strong>-- OR --</strong></p>
+            <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a>
+        <br>
     </div>
   </div>
 </div>
