--- a/education/templates/base.html
+++ b/education/templates/base.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/app.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     {% block stylesheet %}{% endblock %}
   </head>
@@ -59,6 +60,19 @@
       {% block content %} {% endblock %}
     </div>
     {% endblock body %}
+    <footer class="footer container">
+        <div class="row justify-content-between">
+        <p class="">
+            <a href="/pages/privacy/">Privacy Policy</a>
+        </p>
+        <p class="">
+            2021
+        </p>
+        <p class="">
+            <a href="/pages/terms/">Terms</a>
+        </p>
+        </div>
+    </footer>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
