--- a/education/templates/login.html
+++ b/education/templates/login.html
@@ -23,6 +23,8 @@
         <p><strong>-- OR --</strong></p>
             <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a>
         <br>
+            <a href="{% url 'social:begin' 'facebook' %}">Login with FaceBook</a>
+        <br>
     </div>
   </div>
 </div>
