--- a/education/templates/login.html
+++ b/education/templates/login.html
@@ -25,6 +25,7 @@
         <br>
             <a href="{% url 'social:begin' 'facebook' %}">Login with FaceBook</a>
         <br>
+            <a href="{% url 'social:begin' 'linkedin' %}">Login with LinkedIn</a>
     </div>
   </div>
 </div>
