--- a/education/static/css/footer.css
+++ b/education/static/css/footer.css
@@ -1,7 +1,8 @@
 
 footer {
     position: fixed;
-    padding: 0px 10px 0px 10px;
+    margin: 50px 50px;
+    padding: 50px 50px 50px 50px;
     bottom: 0;
     width: 100%;
     height: 40px;
