--- a/education/templates/base.html
+++ b/education/templates/base.html
@@ -60,7 +60,7 @@
       {% block content %} {% endblock %}
     </div>
     {% endblock body %}
-    <footer class="footer container">
+    <!--<footer class="container">
         <div class="row justify-content-between">
         <p class="">
             <a href="/pages/privacy/">Privacy Policy</a>
@@ -72,7 +72,7 @@
             <a href="/pages/terms/">Terms</a>
         </p>
         </div>
-    </footer>
+    </footer>-->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
