--- a/education/templates/new_topic.html
+++ b/education/templates/new_topic.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% load widget_tweaks %} {% block title %}Start a New
+
+{% extends 'base.html' %} {% load widget_tweaks %} {% load static %} {% block title %}Start a New
 Topic{% endblock %} {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'home' %}">Boards</a></li>
 <li class="breadcrumb-item">
@@ -9,5 +10,26 @@ Topic{% endblock %} {% block breadcrumb %}
 <form method="post" novalidate>
   {% csrf_token %} {% include "form.html" %}
   <button type="submit" class="btn btn-success">Post</button>
+<button type="button" class="btn btn-primary js-upload-photos">
+  <span class="glyphicon glyphicon-cloud-upload"></span> Upload photos
+</button>
+
+{# 2. FILE INPUT TO BE USED BY THE PLUG-IN #}
+<input id="fileupload" type="file" name="file" multiple
+       style="display: none;"
+       data-url="{% url 'basic_upload' board.pk %}"
+       data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
+    {% block javascript %}
 </form>
+
+    {# 1. BUTTON TO TRIGGER THE ACTION #}
+
+  {# JQUERY FILE UPLOAD SCRIPTS #}
+  <script src="{% static 'js/jquery.ui.widget.js' %}"></script>
+  <script src="{% static 'js/jquery.iframe-transport.js' %}"></script>
+  <script src="{% static 'js/jquery.fileupload.js' %}"></script>
+
+  {# PHOTOS PAGE SCRIPTS #}
+  <script src="{% static 'js/basic-upload.js' %}"></script>
+{% endblock %}
 {% endblock %}
