--- a/education/templates/my_account.html
+++ b/education/templates/my_account.html
@@ -58,14 +58,15 @@
     $(function () {
 
       /* SCRIPT TO OPEN THE MODAL WITH THE PREVIEW */
-      $("#id_file").change(function () {
-        if (this.files && this.files[0]) {
+      $("#fileUpload").change(function () {
+        console.log(5);
+        if (this.file) {
           var reader = new FileReader();
           reader.onload = function (e) {
             $("#image").attr("src", e.target.result);
             $("#modalCrop").modal("show");
           }
-          reader.readAsDataURL(this.files[0]);
+          reader.readAsDataURL(this.file);
         }
       });
 
