--- a/education/templates/base.html
+++ b/education/templates/base.html
@@ -35,9 +35,15 @@
         {% if user.is_authenticated %}
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
+
+
           <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            {{ user }}
+            {% if user.avatar %}
+                <img src="{{ user.avatar }}" style="max-height: 35px;">
+            {% endif %}{{ user }}
           </a>
+
+
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
             <li><a class="dropdown-item" href="{% url 'my_account' %}">My account</a></li>
             <li><a class="dropdown-item" href="{% url "password_change" %}">Change password</a></li>
@@ -61,6 +67,7 @@
       </ol>
       {% block content %} {% endblock %}
     </div>
+
     {% endblock body %}
     <!--<footer class="container">
         <div class="row justify-content-between">
