--- a/education/templates/signup.html
+++ b/education/templates/signup.html
@@ -8,14 +8,18 @@
         <form method="post" novalidate>
           {% csrf_token %} {% include 'form.html' %}
             <script src='https://www.google.com/recaptcha/api.js'></script>
-            <div class="g-recaptcha" data-sitekey="6LeD3qYaAAAAAOYDwQIiqaBs12etbmS4-r4QIMvS"></div>
-          <button type="submit" class="btn btn-primary btn-block">
+            <div class="g-recaptcha d-flex justify-content-center" data-sitekey="6LeD3qYaAAAAAOYDwQIiqaBs12etbmS4-r4QIMvS"></div>
+            <div class="d-flex justify-content-center">
+          <button type="submit" class="btn btn-primary btn-block mt-2 w-25">
             Create an account
           </button>
+                </div>
         </form>
       </div>
       <div class="card-footer text-muted text-center">
-        Already have an account? <a href="{% url 'login' %}">Log in</a>
+        Already have an account? <a href="{% url 'login' %}">Log in</a><br>
+          <a class="mr-4" href="{% url 'login' %}">Sign up as Reader</a><a href="{% url 'login' %}">Sign up as Blogger</a>
+
       </div>
     </div>
   </div>
